--- a/content/Hello_World.html
+++ b/content/Hello_World.html
@@ -39,13 +39,12 @@
 <body>
 <div class="container mt-4">
   <div class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center mb-4">
-    <h2 class="fw-bold mb-0">Hello World! 🚀 — My First Blog Post</h2>
+    <h2 class="fw-bold mb-0">Hello World! — My First Blog Post</h2>
     <a href="../index.html" class="btn btn-primary mt-2 mt-md-0">
       ← Back to Home
     </a>
   </div>
   
-    <p class="text-muted">Published: <span id="publish-date">April 14, 2025</span></p>
     <hr />
   
     <p>
@@ -57,11 +56,11 @@
     </pre>
   
     <p>
-      If you've ever written your first line of code, you probably recognize the line above. It's the traditional starting point — the digital equivalent of introducing yourself to the terminal and saying, “Hey, I'm here!” 🙋‍♂️
+      If you've ever written your first line of code, you probably recognize the line above. It's the traditional starting point — the digital equivalent of introducing yourself to the terminal and saying, "Hey, I'm here!"
     </p>
   
     <p>
-      Today, I’m doing the same — not in a terminal, but right here in this blog. After many lines of HTML, CSS, JavaScript (and yes, plenty of coffee ☕), this blog is finally live!
+      Today, I'm doing the same — not in a terminal, but right here in this blog. After many lines of HTML, CSS, JavaScript (and yes, plenty of coffee), this blog is finally live!
     </p>
   
     <p>
@@ -69,12 +68,12 @@
     </p>
   
     <p>
-      So to anyone reading: welcome! 🎉 Whether you're new to code or a seasoned dev, I hope this blog brings something useful, fun, or just relatable.
+      So to anyone reading: welcome! Whether you're new to code or a seasoned dev, I hope this blog brings something useful, fun, or just relatable.
     </p>
   
     <p class="fw-bold">
-      Just like every program starts with a “Hello, World!”, every journey begins with a first step.
-      This is mine — and I can’t wait to see where it goes. 🙌
+      Just like every program starts with a "Hello, World!", every journey begins with a first step.
+      This is mine — and I can't wait to see where it goes.
     </p>
   </div>
 </body>
