--- a/content/Linear_Regression_from_Scratch.html
+++ b/content/Linear_Regression_from_Scratch.html
@@ -40,12 +40,11 @@
 <div class="container mt-4">
     
   <div class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center mb-4">
-      <h2 class="fw-bold mb-3">Linear Regression from Scratch — With Gradient Descent 📉</h2>
+      <h2 class="fw-bold mb-3">Linear Regression from Scratch — With Gradient Descent </h2>
       <a href="../index.html" class="btn btn-primary">
         ← Back to Home
       </a>
     </div>
-    <p class="text-muted">Published: <span id="publish-date">April 23, 2025</span></p>
     <hr />
   
     <p>
@@ -97,7 +96,7 @@
     </ul>
   
     <p class="fw-bold">
-      So, in short: <strong>Loss tells us how wrong we are. Gradient descent tells us how to get less wrong.</strong> 🚀
+      So, in short: <strong>Loss tells us how wrong we are. Gradient descent tells us how to get less wrong.</strong> 
     </p>
   
     <h4 class="mt-4"> 4. Load & Scale the Data</h4>
@@ -127,7 +126,7 @@
   print("MSE:", mean_squared_error(y_test, y_pred))
   print("R2 Score:", r2_score(y_test, y_pred))</code></pre>
   
-    <h4 class="mt-4">🔧 6. From Scratch: Function by Function</h4>
+    <h4 class="mt-4"> 6. From Scratch: Function by Function</h4>
   
     <h5>Function 1: Prediction</h5>
     <p>This function performs the forward pass and generates predicted values.</p>
@@ -164,7 +163,7 @@
               print(f"Epoch {i}, Loss: {loss:.4f}")
       return weights, bias</code></pre>
   
-    <h4 class="mt-4">🏋️ 7. Final Combined Code</h4>
+    <h4 class="mt-4"> 7. Final Combined Code</h4>
     <p>This is the complete training pipeline with all the helper functions integrated.</p>
     <pre class="bg-light p-3 rounded"><code>import numpy as np
   
@@ -196,7 +195,7 @@
   
       return weights, bias</code></pre>
   
-    <h4 class="mt-4">📊 8. Compare Results</h4>
+    <h4 class="mt-4"> 8. Compare Results</h4>
     <ul>
       <li><strong>scikit-learn</strong> — MSE: 0.5558, R²: 0.5757</li>
       <li><strong>Custom Model</strong> — MSE: ~similar, R²: ~similar</li>
@@ -208,15 +207,15 @@
       Gradient descent is foundational in machine learning — and this hands-on build makes it far less mysterious.
     </p>
     
-    <p class="fw-bold">Next up: regularization (Ridge & Lasso) and nonlinear regression. Stay curious! 🔍</p>
+    <p class="fw-bold">Next up: regularization (Ridge & Lasso) and nonlinear regression. Stay curious! </p>
 
-    <h4 class="mt-4">🔗 Reference</h4>
+    <h4 class="mt-4"> Reference</h4>
     <p>You can explore the full notebook used to generate this blog on GitHub:</p>
     <p><a href="https://github.com/Pulkit12dhingra/Blog/blob/main/notebooks/Linear_Regression.ipynb" target="_blank">
       📓 Linear_Regression.ipynb on GitHub
     </a></p>
 
-    <p class="fw-bold">Next up: regularization (Ridge & Lasso) and nonlinear regression. Stay curious! 🔍</p>
+    <p class="fw-bold">Next up: regularization (Ridge & Lasso) and nonlinear regression. Stay curious! </p>
   
 </div>
 </body>  
