--- a/content/Searching_algos.html
+++ b/content/Searching_algos.html
@@ -26,11 +26,10 @@
 <body>
 <div class="container mt-4">
   <div class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center mb-4">
-    <h2 class="fw-bold mb-3">Exploring Search Algorithms — From Linear to Binary 🚀</h2>
+    <h2 class="fw-bold mb-3">Exploring Search Algorithms — From Linear to Binary </h2>
     <a href="../index.html" class="btn btn-primary">← Back to Home</a>
   </div>
 
-  <p class="text-muted">Published: <span id="publish-date">May 26, 2025</span></p>
   <hr />
 
   <p>
@@ -38,7 +37,7 @@
     In this blog, we break down two essential techniques: <strong>Linear Search</strong> and <strong>Binary Search</strong>. We’ll walk through their logic, time complexity, and implement them step-by-step in Python. Let’s dive in! 🏊
   </p>
 
-  <h4 class="mt-4">🔍 Linear Search — The Brute Force Hero</h4>
+  <h4 class="mt-4"> Linear Search — The Brute Force Hero</h4>
   <p>
     Linear search is the simplest way to find an element in a list: go through each element one by one until you find the target — or exhaust the list.
   </p>
@@ -51,7 +50,7 @@
   <p><strong>Best Case:</strong> Element at the beginning</p>
   <p><strong>Worst Case:</strong> Element at the end or not found</p>
 
-  <h4 class="mt-4">⚡ Binary Search — Divide and Conquer</h4>
+  <h4 class="mt-4"> Binary Search — Divide and Conquer</h4>
   <p>
     Binary search is a much faster method — but only works on sorted arrays. It repeatedly divides the search interval in half.
   </p>
@@ -78,7 +77,7 @@ target = 10
 print("Linear Search:", linear_search(arr, target))
 print("Binary Search:", binary_search(arr, target))</code></pre>
 
-  <h4 class="mt-4">📊 When Should You Use Which?</h4>
+  <h4 class="mt-4"> When Should You Use Which?</h4>
   <div class="table-responsive">
     <table class="table table-bordered table-striped">
       <thead class="table-dark">
@@ -97,12 +96,12 @@ print("Binary Search:", binary_search(arr, target))</code></pre>
     </table>
   </div>
 
-  <h4 class="mt-4">✅ Final Thoughts</h4>
+  <h4 class="mt-4"> Final Thoughts</h4>
   <p>
     Understanding these core algorithms sets a strong foundation for tackling more complex problems. While linear search is versatile, binary search’s efficiency shines in sorted data scenarios. Master both — they’re classic interview staples!
   </p>
 
-  <h4 class="mt-4">🔗 Reference</h4>
+  <h4 class="mt-4"> Reference</h4>
   <p><a href="https://github.com/Pulkit12dhingra/Algorithms/blob/main/searching_algos.ipynb" target="_blank">📓 searching_algos.ipynb on GitHub</a></p>
 </div>
 </body>
