--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
     <div class="sidebar text-center" id="sidebar">
       <img src="img/profile.jpeg" class="rounded-circle mb-3 profile" alt="Profile" />
       <h4 class="fw-bold">Pulkit Dhingra</h4>
-      <p class="text-muted small">💻 code / 🤖 Artificial Intelligence / 👨‍💻 Software Dev / ☁️ + 🖥️ ing</p>
+      <p class="text-muted small">code / Artificial Intelligence / Software Dev / Cloud + Computing</p>
       <p class="text-muted">
-        <i class="bi bi-geo-alt-fill me-1"></i> Bristol, United Kingdom
+        <i class="bi bi-geo-alt-fill me-1"></i> Cambridge, United Kingdom
       </p>
       <div class="text-start">
         <div class="d-flex align-items-center mb-2">
@@ -185,7 +185,6 @@
                   <h5 class="mb-1">${post.title}</h5>
                   <p class="mb-1">${post.summary}</p>
                 </div>
-                <small class="text-muted text-end ms-3">${post.date}</small>
               </div>
             </a>`;
 
