--- a/content/About.html
+++ b/content/About.html
@@ -40,7 +40,7 @@
 <body>
 <div class="container py-5">
     <div class="text-center mb-4">
-      <h1 class="fw-bold">👋 Hi, I'm Pulkit Dhingra</h1>
+      <h1 class="fw-bold">Hi, I'm Pulkit Dhingra</h1>
       <p class="text-muted">AI enthusiast | Blogger | Engineer | Curious Human</p>
     </div>
   
@@ -60,15 +60,15 @@
   
         <hr />
   
-        <h4 class="mt-4">🎯 Mission</h4>
+        <h4 class="mt-4">Mission</h4>
         <p>
           To simplify complex concepts in AI and tech, and share the joy of building cool things. I want to empower learners and makers with resources and motivation.
         </p>
   
-        <h4 class="mt-4">📍 Location</h4>
+        <h4 class="mt-4">Location</h4>
         <p>Bristol, United Kingdom</p>
   
-        <h4 class="mt-4">🔗 Let's Connect</h4>
+        <h4 class="mt-4">Let's Connect</h4>
         <ul>
           <li><a href="https://github.com/Pulkit12dhingra" target="_blank">GitHub</a></li>
           <li><a href="https://www.linkedin.com/in/pulkit-dhingra-4b7312193/" target="_blank">LinkedIn</a></li>
