--- a/content/LangChain_Document_Loaders.html
+++ b/content/LangChain_Document_Loaders.html
@@ -26,10 +26,9 @@
 <body>
   <div class="container mt-4">
     <div class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center mb-4">
-      <h2 class="fw-bold mb-3">LangChain Document Loaders — A Unified Gateway to Your Data 📄🔗</h2>
+      <h2 class="fw-bold mb-3">LangChain Document Loaders — A Unified Gateway to Your Data </h2>
       <a href="../index.html" class="btn btn-primary">← Back to Home</a>
     </div>
-    <p class="text-muted">Published: <span id="publish-date">May 13, 2025</span></p>
     <hr />
 
     <p>
@@ -41,7 +40,7 @@
       Document loaders in LangChain serve one purpose: extract readable, structured content from diverse sources. Each loader returns a list of <code>Document</code> objects, each containing text and optional metadata.
     </p>
 
-    <h4>🛠️ Commonly Used Loaders</h4>
+    <h4> Commonly Used Loaders</h4>
     <ul>
       <li><strong>PyPDFLoader:</strong> Extracts text from PDF files using <code>pdfplumber</code> or <code>PyPDF2</code></li>
       <li><strong>TextLoader:</strong> Loads plain text files</li>
@@ -135,7 +134,7 @@ docs = loader.load()
   <div class="mb-4">
     <img src="../img/Blog_12_2.png" alt="Image" class="img-fluid rounded shadow" style="max-width: 400px; width: 100%; height: auto;" />
 </div>
-    <h4>📚 Best Practices</h4>
+    <h4> Best Practices</h4>
     <ul>
       <li><strong>Chunk documents</strong> after loading using <code>RecursiveCharacterTextSplitter</code></li>
       <li><strong>Always inspect metadata</strong> to ensure context retention</li>
@@ -143,7 +142,7 @@ docs = loader.load()
       <li><strong>Use DirectoryLoader</strong> with specific loaders via the <code>loader_cls</code> parameter for flexibility</li>
     </ul>
 
-    <h4>✅ Final Thoughts</h4>
+    <h4> Final Thoughts</h4>
     <p>
       LangChain’s document loaders let you pull in context from virtually any source with just a few lines of Python. They’re your first step in building knowledge-aware applications — from chatbots that reference PDFs, to search engines over Notion pages. If data is power, document loaders are your socket to plug into it. 🔌
     </p>
