--- a/content/Python_Setup.html
+++ b/content/Python_Setup.html
@@ -39,12 +39,11 @@
 <body>
 <div class="container mt-4">
   <div class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center mb-4">
-    <h2 class="fw-bold mb-0">Setting Up Your Python Environment 🐍</h2>
+    <h2 class="fw-bold mb-0">Setting Up Your Python Environment </h2>
     <a href="../index.html" class="btn btn-primary">
       ← Back to Home
     </a>
   </div>
-    <p class="text-muted">Published: <span id="publish-date">April 14, 2025</span></p>
     <hr />
       <!-- Embedded YouTube Video -->
       <div class="ratio ratio-16x9 mb-4">
@@ -66,11 +65,11 @@
     </p>
   
     <ul>
-      <li><strong>Add Python to PATH</strong> ✔️</li>
-      <li>Install pip (Python’s package manager)</li>
+      <li><strong>Add Python to PATH</strong></li>
+      <li>Install pip (Python's package manager)</li>
     </ul>
   
-    <h4 class="mt-4">📦 Step 2: Create a Virtual Environment</h4>
+    <h4 class="mt-4">Step 2: Create a Virtual Environment</h4>
     <p>
       Virtual environments let you isolate dependencies per project, so packages from one project don’t mess with another.
     </p>
@@ -92,7 +91,7 @@
       Once activated, your terminal will show the environment name — and now you're installing packages into that isolated space.
     </p>
   
-    <h4 class="mt-4">📚 Step 3: Install Packages</h4>
+    <h4 class="mt-4"> Step 3: Install Packages</h4>
     <p>
       With your virtual environment active, use <code>pip</code> to install libraries:
     </p>
@@ -117,7 +116,7 @@
   <code>pip install -r requirements.txt</code>
     </pre>
   
-    <h4 class="mt-4">💡 Pro Tip: Use <code>python -m pip</code></h4>
+    <h4 class="mt-4"> Pro Tip: Use <code>python -m pip</code></h4>
     <p>
       To avoid path issues, it’s best practice to use:
     </p>
@@ -126,7 +125,7 @@
   <code>python -m pip install flask</code>
     </pre>
   
-    <h4 class="mt-4">✅ That’s It!</h4>
+    <h4 class="mt-4"> That’s It!</h4>
     <p>
       Now you're ready to build your Python project in a clean, reproducible setup. Whether you’re experimenting or building production tools, this foundation will make your development experience smoother and more organized.
     </p>
