--- a/content/Setting_up_Ollama.html
+++ b/content/Setting_up_Ollama.html
@@ -28,10 +28,9 @@
 <body>
   <div class="container mt-4">
     <div class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center mb-4">
-      <h2 class="fw-bold mb-3">Setting Up Ollama 🦙</h2>
+      <h2 class="fw-bold mb-3">Setting Up Ollama </h2>
       <a href="../index.html" class="btn btn-primary">← Back to Home</a>
     </div>
-    <p class="text-muted">Published: <span id="publish-date">May 7, 2025</span></p>
     <hr />
 
     <h4 class="mt-4">🤔 What is Ollama?</h4>
@@ -43,7 +42,7 @@
       Think of it as the “Docker for language models” — download a model once and run it anywhere, completely offline.
     </p>
 
-    <h4 class="mt-4">✅ Why Ollama?</h4>
+    <h4 class="mt-4"> Why Ollama?</h4>
     <ul>
       <li>No API keys or accounts needed</li>
       <li>Run popular open-source models locally</li>
@@ -51,7 +50,7 @@
       <li>Great for testing ideas without cloud dependencies</li>
     </ul>
 
-    <h4 class="mt-4">⬇️ Downloading and Installing Ollama</h4>
+    <h4 class="mt-4"> Downloading and Installing Ollama</h4>
     <p>You can grab the latest release from the official website: <a href="https://ollama.com/" target="_blank">ollama.com</a>.</p>
     <ol>
       <li>Visit <code>https://ollama.com</code></li>
@@ -63,7 +62,7 @@
       <li>Run: <code>ollama --help</code> to verify it’s working</li>
     </ol>
 
-    <h4 class="mt-4">🛠️ Basic Commands</h4>
+    <h4 class="mt-4"> Basic Commands</h4>
 
     <h5>📥 Pull a model</h5>
     <pre class="bg-light p-3 rounded"><code>ollama pull gemma3</code></pre>
@@ -72,7 +71,7 @@
         <img src="../img/Blog_8_1.png" alt="ollama pull" class="img-fluid rounded shadow"/>
     </div>
 
-    <h5>🚀 Run a model</h5>
+    <h5> Run a model</h5>
     <pre class="bg-light p-3 rounded"><code>ollama run gemma3</code></pre>
     <p>Starts an interactive session with the model in your terminal.</p>
     <div class="mt-2 mb-4 text-center">
@@ -85,19 +84,19 @@
         <img src="../img/Blog_8_3.png" alt="ollama list" class="img-fluid rounded shadow"/>
     </div>
 
-    <h5>🗑️ Remove a model</h5>
+    <h5> Remove a model</h5>
     <pre class="bg-light p-3 rounded"><code>ollama rm llama2</code></pre>
     
-    <h5>🧠 View model info</h5>
+    <h5> View model info</h5>
     <pre class="bg-light p-3 rounded"><code>ollama show gemma3</code></pre>
     <div class="mt-2 mb-4 text-center">
         <img src="../img/Blog_8_4.png" alt="ollama show" class="img-fluid rounded shadow"/>
     </div>
 
-    <h5>🖥️ Start the server manually</h5>
+    <h5> Start the server manually</h5>
     <pre class="bg-light p-3 rounded"><code>ollama serve</code></pre>
 
-    <h5>🛑 Stop the running model</h5>
+    <h5> Stop the running model</h5>
     <pre class="bg-light p-3 rounded"><code>ollama stop</code></pre>
 
     <h4 class="mt-4">📎 Final Thoughts</h4>
@@ -106,7 +105,7 @@
     </p>
     <p class="fw-bold">Give it a try, and see how it fits into your AI workflow! 🧪</p>
 
-    <h4 class="mt-4">🔗 Reference</h4>
+    <h4 class="mt-4"> Reference</h4>
     <p><a href="https://ollama.com/" target="_blank">🌐 ollama.com</a></p>
   </div>
 </body>
