--- a/content/Tree.html
+++ b/content/Tree.html
@@ -25,10 +25,9 @@
 <body>
 <div class="container mt-4">
   <div class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center mb-4">
-    <h2 class="fw-bold mb-3">Binary Search Trees in Python — From Scratch 🌲</h2>
+    <h2 class="fw-bold mb-3">Binary Search Trees in Python — From Scratch </h2>
     <a href="../index.html" class="btn btn-primary">← Back to Home</a>
   </div>
-  <p class="text-muted">Published: <span id="publish-date">June 15, 2025</span></p>
   <hr />
 
   <p>In this post, we’ll implement a Binary Search Tree (BST) from the ground up using Python. You'll learn how to:</p>
@@ -64,7 +63,7 @@
         return []
     return inorder_traversal(root.left) + [root.value] + inorder_traversal(root.right)</code></pre>
 
-  <h4 class="mt-4">🔍 Step 4: Search for a Value</h4>
+  <h4 class="mt-4"> Step 4: Search for a Value</h4>
   <pre class="bg-light p-3 rounded"><code>def search(root, value):
     if root is None or root.value == value:
         return root
@@ -72,7 +71,7 @@
         return search(root.left, value)
     return search(root.right, value)</code></pre>
 
-  <h4 class="mt-4">❌ Step 5: Delete a Node</h4>
+  <h4 class="mt-4"> Step 5: Delete a Node</h4>
   <p>This handles three scenarios: leaf deletion, single child, and two children (by replacing with the smallest right subtree node).</p>
   <pre class="bg-light p-3 rounded"><code>def delete_node(root, value):
     if root is None:
@@ -93,14 +92,14 @@
         root.right = delete_node(root.right, min_larger_node.value)
     return root</code></pre>
 
-  <h4 class="mt-4">🌲 Step 6: Display the Tree (Rotated 90°)</h4>
+  <h4 class="mt-4"> Step 6: Display the Tree (Rotated 90°)</h4>
   <pre class="bg-light p-3 rounded"><code>def display_tree(root, level=0):
     if root is not None:
         display_tree(root.right, level + 1)
         print(' ' * 4 * level + '->', root.value)
         display_tree(root.left, level + 1)</code></pre>
 
-  <h4 class="mt-4">🚀 Final Demo</h4>
+  <h4 class="mt-4"> Final Demo</h4>
   <pre class="bg-light p-3 rounded"><code>if __name__ == "__main__":
     root = None
     values = [5, 3, 7, 2, 4, 6, 8]
@@ -120,10 +119,10 @@
     print("\nTree after deleting 3:")
     display_tree(root)</code></pre>
 
-  <h4 class="mt-4">✅ Final Thoughts</h4>
+  <h4 class="mt-4"> Final Thoughts</h4>
   <p>Binary Search Trees are foundational data structures in computer science. Writing one from scratch teaches recursion, tree logic, and algorithmic thinking. Whether you're preparing for interviews or exploring algorithms, mastering BSTs is always worth your time.</p>
 
-  <h4 class="mt-4">🔗 Reference</h4>
+  <h4 class="mt-4"> Reference</h4>
   <p><a href="https://github.com/Pulkit12dhingra/Algorithms/blob/main/tree.ipynb" target="_blank">📓 tree.ipynb on GitHub</a></p>
 </div>
 </body>
