--- a/content/Wiki_Hindi_scrapper.html
+++ b/content/Wiki_Hindi_scrapper.html
@@ -37,17 +37,16 @@
 <body>
   <div class="container mt-4">
     <div class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center mb-4">
-      <h2 class="fw-bold mb-3">Deep Dive: Functions in Our Hindi Wikipedia Scraper 🕸️</h2>
+      <h2 class="fw-bold mb-3">Deep Dive: Functions in Our Hindi Wikipedia Scraper </h2>
       <a href="../index.html" class="btn btn-primary">← Back to Home</a>
     </div>
-    <p class="text-muted">Published: <span id="publish-date">May 20, 2025</span></p>
     <hr />
 
     <p>
       Have you ever wondered how we can automatically retrieve information from URLs? Places like Wikipedia contain vast amounts of text that can power fine-tuning models on specific topics or languages. In this blog post, we’ll see how to scrape Wikipedia for Hindi text specifically, then break down each function in our scraper class to understand how it works.
     </p>
 
-    <h4 class="mt-4">📦 The <code>requests</code> Module</h4>
+    <h4 class="mt-4"> The <code>requests</code> Module</h4>
     <p>
       The <code>requests</code> library is Python’s standard for HTTP communication. It abstracts away lower-level networking details, allowing you to send GET, POST, and other HTTP requests with ease.
     </p>
@@ -124,7 +123,7 @@ title = soup.find('title').get_text()</code></pre>
     <pre class="bg-light p-3 rounded"><code>def save(self, text, filename="hindi_text.txt"):
     with open(filename, "w", encoding="utf-8") as f:
         f.write(text)
-    print(f"✅ Text saved to {filename}")</code></pre>
+    print(f" Text saved to {filename}")</code></pre>
     <ul>
       <li><strong>Parameters:</strong></li>
       <ul>
@@ -135,7 +134,7 @@ title = soup.find('title').get_text()</code></pre>
       <li><strong>Feedback:</strong> prints a green checkmark and file path for confirmation.</li>
     </ul>
 
-    <h4 class="mt-4">✅ Complete Class: All Functions Together</h4>
+    <h4 class="mt-4"> Complete Class: All Functions Together</h4>
     <p>
       Here’s the full, ready-to-run <code>HindiWikipediaScraper</code> combining all three methods. Copy, paste, and execute!
     </p>
@@ -170,7 +169,7 @@ class HindiWikipediaScraper:
     def save(self, text, filename="hindi_text.txt"):
         with open(filename, "w", encoding="utf-8") as f:
             f.write(text)
-        print(f"✅ Text saved to {filename}")
+        print(f" Text saved to {filename}")
 
 # Usage
 url = "https://hi.wikipedia.org/wiki/%E0%A4%AE%E0%A5%81%E0%A4%96%E0%A4%AA%E0%A5%83%E0%A4%B7%E0%A5%8D%E0%A4%A0"
