--- a/404.html
+++ b/404.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8JMS98M7C7"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-8JMS98M7C7');
+    </script>
+    
     <meta charset="UTF-8">
     <title>Redirecting...</title>
     <script>
-      // Redirect all unknown URLs back to index.html for SPA behavior
+      // Redirect all unknown URLs back to index.html
       window.location.replace('/Blog/index.html');
     </script>
   </head>
