--- a/content/Langchains_with_Ollama.html
+++ b/content/Langchains_with_Ollama.html
@@ -1,5 +1,15 @@
 <html lang="en">
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-8JMS98M7C7"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-8JMS98M7C7');
+  </script>
+  
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Byte-Sized-Brilliance-AI</title>
@@ -28,7 +38,7 @@
     rel="stylesheet"
   />
 
-  <link rel="stylesheet" href="data/style.css?v=1.0.0" />
+  <link rel="stylesheet" href="../data/style.css?v=1.0.0" />
   <link
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     rel="stylesheet"
