--- a/content/Ridge_Regression_from_Scratch.html
+++ b/content/Ridge_Regression_from_Scratch.html
@@ -1,11 +1,19 @@
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Byte-Sized-Brilliance-AI</title>
-        <link rel="icon" type="image/png" href="../img/icon.png" />
-      
-        <!-- Open Graph -->
+<head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-8JMS98M7C7"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-8JMS98M7C7');
+  </script>
+  
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Byte-Sized-Brilliance-AI</title>
+  <link rel="icon" type="image/png" href="../img/icon.png" />        <!-- Open Graph -->
         <meta property="og:title" content="Pulkit's Blog" />
         <meta property="og:description" content="Explore tutorials, projects, and insights into AI, coding, and more." />
         <meta property="og:image" content="../img/social-preview.jpg" />
@@ -30,7 +38,7 @@
           rel="stylesheet"
         />
       
-        <link rel="stylesheet" href="data/style.css?v=1.0.0" />
+        <link rel="stylesheet" href="../data/style.css?v=1.0.0" />
         <link
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
         rel="stylesheet"
